# imgrids

./: .gitignore  API_UPDATE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  Roboto.h  build-web.py  chars.c  font_to_bin.py  font_to_c.py  measure_cpu.py  mono.c  screenshot.py  shapes.c  tt.c
.cargo/: config.toml
.githooks/: pre-commit
backends/buf/: Cargo.toml
backends/buf/src/: lib.rs
backends/fb0/: Cargo.toml
backends/fb0/src/: lib.rs
backends/sdl/: Cargo.toml
backends/sdl/src/: lib.rs
backends/wasm/: Cargo.toml
backends/wasm/src/: lib.rs
ex1/: Makefile  README.md  chars.c
ex1/fonts/: font_to_bin.py
ex2/: Makefile  chars.c  chars.h  demo.c  mono.c  mono.h  shapes.c  shapes.h  tt.c  tt.h
ex3/: Makefile  demo.c
ex4/: Cargo.toml  build-web.py
ex4/.cargo/: config.toml
ex4/examples/: demo.rs  demo_fb0.rs  demo_sdl2.rs
ex4/src/: bpp.rs  color.rs  framebuf.rs  framebuffer.rs  layout.rs  lib.rs  raster.rs  renderer.rs  ttf.rs
ex4/src/backends/: backend.rs  framebuffer.rs  mod.rs  sdl2.rs  web.rs
ex4/src/fonts/: font8x8.rs  font_terminus_8x16.rs  font_vga16.rs
ex4/src/renderers/: chars.rs  font8x8.rs  font_vga16.rs  mod.rs  mono.rs  shapes.rs  tt.rs
examples/: TODO.md  app.rs  build.rs  demo.lua  demo.rs  raw.rs  ui.lua
examples/app/: main.rs  ui.rs
examples/arm/: Cargo.toml
examples/arm/src/: main.rs  raw.rs
examples/fb32/: Cargo.toml
examples/fb32/src/: main.rs  raw.rs
examples/sdl/: Cargo.toml
examples/sdl/src/: main.rs  raw.rs
examples/wasm/: Cargo.toml  demo.html  raw.html
examples/wasm/src/: main.rs  raw.rs
imgrids/: Cargo.toml
imgrids/icons/: lpf_1.alpha  lpf_120.alpha  lpf_140.alpha  lpf_16.alpha  lpf_30.alpha  lpf_36.alpha  lpf_70.alpha
imgrids/src/: lib.rs  prebaked.rs  raster.rs  ttf.rs
imgrids/tests/: transpiler.rs
imgrids/transpiler/: gen_font_atlas.py  layout.lua  render_icon.py  symbols.lua
scripts/: gen_demo_ui.sh  gen_font_atlas.py  gen_icon.sh  layout.lua  render_icon.py
src/: framebuffer.rs  layout.rs  lib.rs  prebaked.rs  raster.rs  sdl2.rs  sim.html  ttf.rs  web.js  web.rs
src/fonts/: font_terminus_8x16.rs  font_vga16.rs
tests/: transpiler.rs
tests/snapshot/: .gitignore  Cargo.toml  build.rs
tests/transpiler/: bad_color.lua  bad_font.stderr  test.stderr  warnings.lua  warnings.stderr
(+7 files in other folders)
