[package]
name    = "imgrids"
version = "0.1.0"
edition = "2021"

[lib]
name = "imgrids"

[dependencies]
libc = "0.2"
ab_glyph = "0.2"
sdl2 = { version = "0.35", optional = true }

[features]
fb0 = []
sdl = ["dep:sdl2"]
web = []
bpp16 = []
bpp32 = []
bpp32rgba = []

[[example]]
name = "raw"
path = "examples/raw.rs"

[[example]]
name = "app"
path = "examples/app/main.rs"

[profile.release]
opt-level = 3
codegen-units = 16
panic = "abort"
