[workspace]
members = [
    "imgrids",
    "backends/sdl",
    "backends/fb0",
    "backends/wasm",
    "examples/sdl",
    "examples/fb32",
    "examples/arm",
    "examples/wasm",
]
default-members = [
    "imgrids",
    "backends/sdl",
    "backends/fb0",
    "examples/sdl",
    "examples/fb32",
]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 16
panic = "abort"
