[workspace]
members = [
    "imgrids",
    "backends/sdl",
    "backends/fb0",
    "backends/buf",
    "backends/wasm",
    "examples/sdl",
    "examples/fb32",
    "examples/arm",
    "examples/wasm",
    "tests/snapshot",
]
default-members = [
    "imgrids",
    "backends/sdl",
    "backends/fb0",
    "backends/buf",
    "examples/sdl",
    "examples/fb32",
    "tests/snapshot",
]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 16
panic = "abort"
