[package]
name    = "imgrids"
version = "0.1.0"
edition = "2021"

[lib]
name = "imgrids"

[dependencies]
libc = "0.2"
ab_glyph = "0.2"
sdl2 = { version = "0.35", optional = true }

[features]
default = ["fb0"]
fb0 = []
sdl = ["dep:sdl2"]

[[example]]
name = "demo_fb0"
required-features = ["fb0"]

[[example]]
name = "demo_sdl2"
required-features = ["sdl"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
